# mab-ranking

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
examples/jester/: README.md  example.ipynb  example_dts.py
examples/movielens/: README.md  evaluation.ipynb  example.ipynb
mab_ranking/bandits/: bandits.py  rank_bandits.py
tests/bandits/: test_bandits.py  test_rank_bandits.py
