[metadata]
author = Pavlos Mitsoulis Ntompos, Ioakeim (Joakim) Lazakis, Dionysios Varelas
author-email = pavlos@kenza.ai, joakim@kenza.ai, dionvarelas@gmail.com
summary = Online Ranking with Multi-Armed-Bandits
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Environment :: Console
keywords = mab-ranking machine-learning machine-learning-deploy machine-learning-production multi-armed-bandits ranking online-ranking multi-armed-bandits-production
license = MIT
description-file = README.md

[bdist_wheel]
universal=1

[flake8]
max-line-length=150
exclude=.svn,CVS,.bzr,.hg,.git,__pycache__,.tox,.eggs,venv/,sagify/commands/__init__.py
